--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "Converts Länsförsäkringar exported transactions csv to YNAB-friendly format",
   "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "john.hargestam",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/jest": "^27.0.2",
+    "jest": "^27.2.5"
+  },
+  "dependencies": {
+    "ts-node": "^10.3.0",
+    "typescript": "^4.4.4"
+  }
 }
