--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^27.0.2",
-    "jest": "^27.2.5"
+    "@types/node": "^16.11.0",
+    "jest": "^27.2.5",
+    "ts-jest": "^27.0.6"
   },
   "dependencies": {
     "ts-node": "^10.3.0",
