--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.0",
     "jest": "^27.2.5",
+    "prettier": "^2.4.1",
     "ts-jest": "^27.0.6"
   },
   "dependencies": {
