--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ts-jest": "^27.0.6"
   },
   "dependencies": {
+    "prompt-sync": "^4.2.0",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   }
